styles.css
:root {
  --light-bg: #e9ddc6;
  --light-text: #2b2b2b;

  --dark-bg: #2b2b2b;
  --dark-text: #e7e7e7;
}

html {
  background-color: transparent;
  overflow-x: hidden;
}

html,
body {
  margin: 0;
  padding: 0;
  min-height: 100%;
  height: 100%;
  width: 100%;
  /* border: 2px solid yellow; */
}

body {
  display: -webkit-box;
  display: -flexbox;
  display: -ms-flexbox;
  display: flex;
  flex-direction: column;
  background: var(--light-bg);
  background-size: cover, contain;
  background-position: center, right bottom;
  background-repeat: no-repeat, no-repeat;
  font-family: 'Cormorant Garamond', serif;
}

body.dark-theme {
  background: var(--dark-bg);
  color: var(--dark-text);
}

blockquote {
  margin: 1rem;
  margin-bottom: 2.4rem;
  margin-top: 3rem;
  font-size: 2.1vw;
  background: transparent;
}

a {
  text-decoration: none;
}

.dark-theme a:link {
  color: goldenrod;
}

.dark-theme a:visited {
  color: rgb(196, 44, 44);
}

svg {
  fill: var(--light-text);
}

.dark-theme svg {
  fill: var(--dark-text);
}

.bg-img {
  position: absolute;
  overflow: hidden;
  opacity: 15%;
  pointer-events: none;
}

.dark-theme .bg-img {
  opacity: 10%;
}

#title {
  position: relative;
  visibility: visible;
  max-width: 100%;
  align-self: center;
}

#clock {
  position: fixed;
  top: 0%;
  right: -10%;
  transform: scale(140%);
  rotate: -45deg;
}

.flex-wrapper {
  display: flex;
  flex-wrap: wrap;
  gap: 5%;
  margin: 3rem 4rem;
  top: 0;
  left: 0;
}

.left-col {
  display: flex;
  flex-direction: column;
  flex-basis: 30%;
  flex-grow: 1;
  flex-shrink: 0;
  text-align: center;
  max-block-size: 90vh;
}

.right-col {
  margin: 0 1rem;
  display: block;
  flex-basis: 60%;
  flex-grow: 1;
  flex-shrink: 1;
}

.flex-container {
  margin: 2rem 0;
  padding: 2rem 0;
  display: flow-root;
  align-items: center;
  text-align: center;
}

.arrow {
  width: 2.5rem;
  stroke: var(--light-text);
}

.right {
  position: relative;
  top: 4px;
  right: 10px;
  animation: 0.8s linear PointLeft infinite;
}

@keyframes PointLeft {
  0% {
    transform: translate(20%, -45%);
  }

  10% {
    transform: translate(0%, -45%);
  }

  100% {
    transform: translate(20%, -45%);
  }
}

.left {
  position: relative;
  transform-origin: top;
  top: 8px;
  left: 0px;
  rotate: 180deg;
  animation: 0.8s linear PointRight infinite;
}

@keyframes PointRight {
  0% {
    transform: translate(0%, -45%);
  }

  10% {
    transform: translate(-20%, -45%);
  }

  100% {
    transform: translate(0%, -45%);
  }
}

.dark-theme .arrow {
  stroke: var(--dark-text);
}

#generate-btn {
  width: 4.2rem;
}

#generate-img {
  animation: Spin 18s linear infinite;
}

@keyframes Spin {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

button {
  padding: 0;
  opacity: 80%;
  background-color: transparent;
  border: none;
}

button:hover {
  opacity: 100%;
}

.btn-pop {
  transition: ease-out 0.1s;
  cursor: pointer;
  height: 2rem;
  width: 2rem;
  margin: 0 0.3rem;
}

.btn-pop:hover {
  transform: scale(120%);
}

.btn-pop:active {
  transform: scale(105%);
}

footer {
  position: fixed;
  bottom: 0;
  left: 0;
  margin: 0 2rem 0 2rem;
}

footer p,
footer a {
  font-size: 1rem;
}

.header {
  position: absolute;
  display: flex;
  flex-direction: row;
  top: 1rem;
  right: 2rem;
}

@media (orientation: portrait) {
  .header {
    margin: 1.5rem 0.2rem;
    /* flex-direction: column-reverse; */
    /* border: 1px solid yellow; */
  }

  .flex-wrapper {
    margin: 4rem 3rem;
  }

  .flex-container {
    position: fixed;
    display: flex;
    bottom: 0;
    left: 50%;
    transform: translate(-50%, 0%);
  }

  #generate-btn {
    position: relative;
    bottom: 50%;
    transform: translate(0%, -100%);
  }

  .right-col {
    margin: 0;
    margin-top: 2.5rem;
    margin-bottom: 15vh;
    display: none;
    flex-basis: 100%;
    align-self: center;
    justify-self: center;
  }

  .left-col {
    margin: 0;
    padding: 0;
    max-block-size: 70vh;
  }

  button {
    opacity: 100%;
  }

  p,
  blockquote {
    margin-top: 0;
    font-size: 2.4vh;
  }

  a {
    font-size: 4.4vw;
  }

  #clock {
    /* position: absolute; */
    transform: translate(35%, 10%);
    height: 110%;
    overflow: hidden;
  }

  footer p,
  footer a {
    font-size: 0.9rem;
  }
}

